# prompt-firewall

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: default_policy.yaml
docker/: prometheus.yml
docs/decisions/: 001-detection-architecture.md  002-data-flow.md
llm_prompt_firewall/: __init__.py  api.py  cli.py  firewall.py  metrics.py
llm_prompt_firewall/core/: __init__.py  injection_detector.py  prompt_analyzer.py  risk_scoring.py
llm_prompt_firewall/datasets/: prompt_injection_attacks.json
llm_prompt_firewall/detectors/: __init__.py  embedding_detector.py  llm_classifier.py  pattern_detector.py
llm_prompt_firewall/examples/: vulnerable_llm_app.py
llm_prompt_firewall/filters/: __init__.py  input_filter.py  output_filter.py
llm_prompt_firewall/models/: __init__.py  schemas.py
llm_prompt_firewall/policy/: __init__.py  policy_engine.py
llm_prompt_firewall/tests/: test_api.py  test_cli.py  test_embedding_detector.py  test_firewall.py  test_injection_detector.py  test_input_output_filters.py  test_llm_classifier.py  test_metrics.py  test_pattern_detector.py  test_policy_engine.py  test_prompt_analyzer.py  test_risk_scoring.py
